增加模拟功能

--- a/helloresty/config.yaml
+++ b/helloresty/config.yaml
@@ -13,6 +13,18 @@ log:
   backup_count: 10
   compress: true
 
+service:
+  interval: 5 # 刷新频率，单位：分钟
+  proxy: http://proxyserver:8888  # 代理地址： 为空则不启用代理
+
+notify:
+  type: 0  # 是否启用通知, 0 为不启用， 1 为 bark, 2为 wechat
+  url:  # 通知地址
+
 # 预订配置
 book:
+  assign_dates: ["2022-02-09", "2022-02-10"]  # 自动选择的日期，如果 是自动提交，一定要指定日期，不然会自动选择最近的
+  submit: 0   # 有 可预约日期 是否自动提交： 1为自动提交 ， 0 为不提交
+  show_num: 1 # 是否显示 可预约的数量
   
+
