--- a/hellodb/docker-compose.yml
+++ b/hellodb/docker-compose.yml
@@ -4,6 +4,7 @@ version: '3.1'
 services:
   mysql:
     image: mysql:5.7
+    platform: linux/amd64
     container_name: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
